<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_port"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="433dp"
        android:layout_height="65dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:text="@string/car_identifier"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/button"
        android:onClick="launchCarMake"
        android:text="@string/identify_the_car_make"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMainHint"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/hint"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:onClick="launchHint"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMainIdentifyImage"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/identify_the_car_image"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnMainHint"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/btnMainHint"
        app:layout_constraintTop_toBottomOf="@+id/btnMainHint"
        android:onClick="launchCarImage"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMainAdvancedLevel"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/advanced_level"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnMainIdentifyImage"
        app:layout_constraintStart_toStartOf="@+id/btnMainIdentifyImage"
        app:layout_constraintTop_toBottomOf="@+id/btnMainIdentifyImage"
        android:onClick="launchAdvancedLevel"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnQuit"
        android:layout_width="271dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="@string/quit"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/btnMainAdvancedLevel"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/btnMainAdvancedLevel"
        app:layout_constraintTop_toBottomOf="@+id/btnMainAdvancedLevel"
        android:onClick="launchQuit"/>

    <Switch
        android:id="@+id/switch_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="24dp"
        android:text="@string/timer"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</androidx.constraintlayout.widget.ConstraintLayout>