<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defaultBgColor"
    tools:context=".AdvancedLevel">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:text="@string/advanced_level"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_car1"
        android:layout_width="160dp"
        android:layout_height="151dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/car_image"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="?android:attr/panelBackground"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView_car2"
        android:layout_width="160dp"
        android:layout_height="151dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/car_image"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_car1"
        app:srcCompat="?android:attr/panelBackground"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView_car3"
        android:layout_width="160dp"
        android:layout_height="151dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/car_image"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_car2"
        app:srcCompat="?android:attr/panelBackground"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/sub_button"
        android:onClick="onClickButton1"
        android:textColor="@color/purple_700"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textResult1"
        android:layout_width="140dp"
        android:layout_height="27dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toEndOf="@+id/imageView_car1"
        app:layout_constraintTop_toBottomOf="@+id/userInput1" />

    <TextView
        android:id="@+id/textResult2"
        android:layout_width="140dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toEndOf="@+id/imageView_car2"
        app:layout_constraintTop_toBottomOf="@+id/userInput2" />

    <TextView
        android:id="@+id/textResult3"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toEndOf="@+id/imageView_car3"
        app:layout_constraintTop_toBottomOf="@+id/userInput3" />

    <TextView
        android:id="@+id/text_Score"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:gravity="center"
        android:text="@string/score_0"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userInput1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.512" />

    <EditText
        android:id="@+id/userInput1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/your_answer"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toEndOf="@+id/imageView_car1"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/userInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/your_answer"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/imageView_car2"
        app:layout_constraintTop_toBottomOf="@+id/textResult1" />

    <EditText
        android:id="@+id/userInput3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:ems="10"
        android:focusable="true"
        android:hint="@string/your_answer"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/hintWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toEndOf="@+id/imageView_car3"
        app:layout_constraintTop_toBottomOf="@+id/textResult2" />

    <TextView
        android:id="@+id/textTimerAdv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_car3"
        app:layout_constraintVertical_bias="0.693" />

</androidx.constraintlayout.widget.ConstraintLayout>